🚀 MAESTRO - UAE Life Automation Platform
- Complete Next.js 16 application with App Router
- AWS infrastructure deployed to UAE (me-central-1)
- EKS Kubernetes cluster with 3 nodes
- RDS Aurora PostgreSQL Serverless
- ECR Docker registry
- GitHub Actions CI/CD pipeline
- Automated deployment on push to main

Features:
- Dashboard with life score & automation tracking
- Document management with upload/download
- Vehicle services (fines, Salik, registration)
- Crypto vault with balance tracking
- Profile & settings management
- Authentication with NextAuth.js
- Premium UAE-inspired design

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,11 @@ prompt
 server.log
 # Skills directory
 /skills/
+
+# AWS Deployment Secrets - DO NOT COMMIT
+terraform/terraform.tfvars
+.credentials.txt
+*.tfstate
+*.tfstate.*
+.terraform/
+tfplan
