--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,14 +1,11 @@
-# MAESTRO - Automated CI/CD Pipeline
-# Deploys automatically when you push to main branch
-
-name: 🚀 MAESTRO CI/CD
+name: MAESTRO CI/CD
 
 on:
   push:
-    branches: [main, master]
-  pull_request:
-    branches: [main, master]
-  workflow_dispatch:  # Manual trigger from GitHub UI
+    branches:
+      - main
+      - master
+  workflow_dispatch:
 
 env:
   AWS_REGION: me-central-1
@@ -17,15 +14,10 @@ env:
   NAMESPACE: maestro
 
 jobs:
-  # ==========================================
-  # JOB 1: Build & Push Docker Image
-  # ==========================================
   build:
-    name: 🏗️ Build & Push Image
+    name: Build and Push Image
     runs-on: ubuntu-latest
-    outputs:
-      image_tag: ${{ steps.build.outputs.image_tag }}
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -44,7 +36,6 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Build and push Docker image
-        id: build
         uses: docker/build-push-action@v5
         with:
           context: .
@@ -54,18 +45,12 @@ jobs:
             ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          build-args: |
-            NEXT_PUBLIC_API_URL=${{ secrets.NEXT_PUBLIC_API_URL }}
 
-  # ==========================================
-  # JOB 2: Deploy to EKS
-  # ==========================================
   deploy:
-    name: 🚀 Deploy to EKS
+    name: Deploy to EKS
     needs: build
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -82,15 +67,13 @@ jobs:
           version: 'v1.28.0'
 
       - name: Update kubeconfig
-        run: |
-          aws eks update-kubeconfig --name ${{ env.EKS_CLUSTER }} --region ${{ env.AWS_REGION }}
+        run: aws eks update-kubeconfig --name ${{ env.EKS_CLUSTER }} --region ${{ env.AWS_REGION }}
 
-      - name: Deploy to Kubernetes
+      - name: Create namespace
+        run: kubectl create namespace ${{ env.NAMESPACE }} --dry-run=client -o yaml | kubectl apply -f -
+
+      - name: Create secrets
         run: |
-          # Create namespace if not exists
-          kubectl create namespace ${{ env.NAMESPACE }} --dry-run=client -o yaml | kubectl apply -f -
-          
-          # Create/update secrets
           kubectl create secret generic maestro-secrets \
             --namespace=${{ env.NAMESPACE }} \
             --from-literal=DATABASE_URL="postgresql://maestro_admin:${{ secrets.DB_PASSWORD }}@maestro-cluster.cluster-c1m0cmy8agx9.me-central-1.rds.amazonaws.com:5432/maestro?sslmode=require" \
@@ -98,51 +81,28 @@ jobs:
             --from-literal=NEXTAUTH_URL="https://maestro.app" \
             --from-literal=ENCRYPTION_KEY="${{ secrets.ENCRYPTION_KEY }}" \
             --dry-run=client -o yaml | kubectl apply -f -
-          
-          # Create ECR pull secret
+
+      - name: Create ECR pull secret
+        run: |
           kubectl create secret docker-registry ecr-secret \
             --namespace=${{ env.NAMESPACE }} \
-            --docker-server=${{ steps.login-ecr.outputs.registry || '368331615566.dkr.ecr.me-central-1.amazonaws.com' }} \
+            --docker-server=368331615566.dkr.ecr.me-central-1.amazonaws.com \
             --docker-username=AWS \
             --docker-password=$(aws ecr get-login-password --region ${{ env.AWS_REGION }}) \
             --dry-run=client -o yaml | kubectl apply -f -
-          
-          # Deploy application
+
+      - name: Deploy application
+        run: |
+          export IMAGE_TAG=${{ github.sha }}
           envsubst < k8s/deployment.yaml | kubectl apply -f -
-          
-          # Wait for rollout
-          kubectl rollout status deployment/maestro-app -n ${{ env.NAMESPACE }} --timeout=300s
+
+      - name: Wait for rollout
+        run: kubectl rollout status deployment/maestro-app -n ${{ env.NAMESPACE }} --timeout=300s
 
       - name: Health check
         run: |
           kubectl wait --for=condition=ready pod -l app=maestro -n ${{ env.NAMESPACE }} --timeout=120s
-          
-          # Get LoadBalancer URL
           echo "=========================================="
-          echo "🚀 DEPLOYMENT SUCCESSFUL!"
+          echo "DEPLOYMENT SUCCESSFUL!"
           echo "=========================================="
-          LB_URL=$(kubectl get svc maestro-service -n ${{ env.NAMESPACE }} -o jsonpath='{.status.loadBalancer.ingress[0].hostname}')
-          echo "Application URL: http://$LB_URL"
-          echo "=========================================="
-
-  # ==========================================
-  # JOB 3: Notify (Optional)
-  # ==========================================
-  notify:
-    name: 📢 Notify
-    needs: [build, deploy]
-    runs-on: ubuntu-latest
-    if: always() && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master')
-    
-    steps:
-      - name: Deployment Status
-        run: |
-          if [ "${{ needs.deploy.result }}" == "success" ]; then
-            echo "✅ MAESTRO deployed successfully!"
-            echo "Branch: ${{ github.ref_name }}"
-            echo "Commit: ${{ github.sha }}"
-            echo "Author: ${{ github.actor }}"
-          else
-            echo "❌ Deployment failed or was skipped"
-            exit 1
-          fi
+          kubectl get svc maestro-service -n ${{ env.NAMESPACE }}
